k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zegreo-api
  namespace: zegreo-api
  labels:
    app: zegreo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zegreo-api
  template:
    metadata:
      labels:
        app: zegreo-api
    spec:
      imagePullSecrets:
        - name: do-registry-secret
      containers:
        - name: zegreo-api
          image: registry.digitalocean.com/zogreolabs/zegreo-api:api-prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
