k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zegreo-api
  namespace: zegreo-api
spec:
  selector:
    app: zegreo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
